# svelte-ssr_rs

./: Cargo.toml
backend/: main.rs
cli/: Cargo.toml
framework/: Cargo.toml
framework-playground/: justfile
framework-playground/backend/: main.rs
framework-playground/frontend/: App.svelte  main.js  server.js
framework-playground/frontend/lib/: Counter.svelte
